@@ -77,7 +77,7 @@
 </div>
 
 <div class="tile"><h4>Beta</h4>
-    0.4<br/>
+    0.4.1<br/>
     <a href="http://hyperspy.org/download.html#beta-releases">Download</a>
 </div>
 
