@@ -77,7 +77,7 @@
 </div>
 
 <div class="tile"><h4>Beta</h4>
-    0.4<br/>
+    0.4.1<br/>
     <a href="http://hyperspy.org/download.html#beta-releases">Download</a>
 </div>
 
@@ -129,11 +129,11 @@
 <div class="section" id="windows">
 <h3>Windows<a class="headerlink" href="#windows" title="Permalink to this headline">¶</a></h3>
 <p>The Windows installer for the current 0.4 beta release, can be downloaded using the following links:</p>
-<p><a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/hyperspy-0.4.win32.exe">Hyperspy-0.4 beta for Windows 32-bits</a></p>
-<p><a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/hyperspy-0.4.win-amd64.exe">Hyperspy-0.4 beta for Windows 64-bits</a></p>
+<p><a class="reference external" href="http://pypi.python.org/packages/any/h/hyperspy/hyperspy-0.4.1.win32.exe#md5=c68619d0887883a4ef6ab6db095dc15f">Hyperspy-0.4.1 beta for Windows 32-bits</a></p>
+<p><a class="reference external" href="http://pypi.python.org/packages/any/h/hyperspy/hyperspy-0.4.1.win-amd64.exe#md5=010b6ba3ed3b0efd328b467eabf6f20b">Hyperspy-0.4.1 beta for Windows 64-bits</a></p>
 <div class="admonition warning">
 <p class="first admonition-title">Warning</p>
-<p class="last">before installing Hyperspy the <a class="reference external" href="http://hyperspy.org/hyperspy-doc/dev/user_guide/install.html#install-dependencies" title="(in Hyperspy v0.4)"><em class="xref std std-ref">the required libraries must be installed</em></a></p>
+<p class="last">before installing Hyperspy the <a class="reference external" href="http://hyperspy.org/hyperspy-doc/dev/user_guide/install.html#install-dependencies" title="(in Hyperspy v0.4.1)"><em class="xref std std-ref">the required libraries must be installed</em></a></p>
 </div>
 <div class="admonition note">
 <p class="first admonition-title">Note</p>
@@ -148,10 +148,9 @@
 </div>
 </div>
 </div>
-<div class="section" id="linux">
-<h3>Linux<a class="headerlink" href="#linux" title="Permalink to this headline">¶</a></h3>
-<p>A Debian/Ubuntu package <a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.4-1_all.deb">can be downloaded here</a>.</p>
-<p>Please note that the latest version of Ubuntu is required to install this deb file.</p>
+<div class="section" id="ubuntu">
+<h3>Ubuntu<a class="headerlink" href="#ubuntu" title="Permalink to this headline">¶</a></h3>
+<p>An Ubuntu package <a class="reference external" href="https://github.com/downloads/hyperspy/hyperspy/python-hyperspy_0.4-1_all.deb">can be downloaded here</a>. It is compatible with Ubuntu Oneiric or newer.</p>
 </div>
 </div>
 <div class="section" id="development-version">
