@@ -77,7 +77,7 @@
 </div>
 
 <div class="tile"><h4>Beta</h4>
-    0.4<br/>
+    0.4.1<br/>
     <a href="http://hyperspy.org/download.html#beta-releases">Download</a>
 </div>
 
@@ -135,6 +135,7 @@ developed and used in research (see
 <div class="section" id="news">
 <h2>News<a class="headerlink" href="#news" title="Permalink to this headline">¶</a></h2>
 <ul class="simple">
+<li><tt class="docutils literal"><span class="pre">16/04/2012</span></tt> Hyperspy 0.4.1  has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 <li><tt class="docutils literal"><span class="pre">29/02/2012</span></tt> Hyperspy 0.4  has been released! See <a class="reference internal" href="download.html#beta-releases"><em>Beta Releases</em></a></li>
 </ul>
 </div>
