@@ -1,4 +1,5 @@
 News
 ====
+* ``16/04/2012`` Hyperspy 0.4.1  has been released! See :ref:`beta-releases`
 * ``29/02/2012`` Hyperspy 0.4  has been released! See :ref:`beta-releases`
 
